unit test's for ImageService created